--- a/ocaml-libmpdclient.opam
+++ b/ocaml-libmpdclient.opam
@@ -11,4 +11,7 @@ build: [["jbuilder" "build" "-p" name "-j" jobs]]
 build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
 depends: [
   "jbuilder" {build}
+  "lwt"
+  "unix"
+  "str"
 ]
