--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,21 @@
 language: c
 sudo: required
-install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
-script: bash -ex .travis-opam.sh
-env:
-        #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.00
-        #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.01
-        #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.02
-        #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.03
-        #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.04
-  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.05
-os:
-  - linux
-    #  - osx
+
+services:
+        -docker
+
+matrix:
+  include:
+    - env: TYPE=ubuntu-17.04
+
+install:
+  - docker build
+      -t ocaml-libmpdclient/${TYPE}
+      -f travis/Dockerfile.${TYPE}
+      .
+
+script:
+  - docker run
+      --interactive
+      --tty
+      ocaml-libmpdclient/${TYPE}
