Travis: fix typo

--- a/travis/Dockerfile.ubuntu-17.04
+++ b/travis/Dockerfile.ubuntu-17.04
@@ -9,7 +9,8 @@ RUN \
     mercurial \
     gcc \
     g++ \
-    make \    wget \
+    make \
+    wget \
     mpd \
     libmpd-dev \
     aspcud \
