--- a/travis/mpd.conf
+++ b/travis/mpd.conf
@@ -36,13 +36,13 @@ db_file			"/home/ocaml-libmpdclient/mpd/tag_cache"
 # The special value "syslog" makes MPD use the local syslog daemon. This
 # setting defaults to logging to syslog, otherwise logging is disabled.
 #
-log_file			"/var/log/mpd/mpd.log"
+log_file			"/home/ocaml-libmpdclient/mpd/mpd.log"
 #
 # This setting sets the location of the file which stores the process ID
 # for use of mpd --kill and some init scripts. This setting is disabled by
 # default and the pid file will not be stored.
 #
-pid_file			"/run/mpd/pid"
+pid_file			"/home/ocaml-libmpdclient/mpd/pid"
 #
 # This setting sets the location of the file which contains information about
 # most variables to get MPD back into the same general shape it was in before
