--- a/travis/Dockerfile.ubuntu-17.04
+++ b/travis/Dockerfile.ubuntu-17.04
@@ -45,4 +45,4 @@ RUN opam install lwt cmdliner jbuilder odoc
 # RUN echo ". /home/ocaml-libmpdclient/.opam/opam-init/init.sh > /dev/null 2> /dev/null || true" > /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
 # RUN echo "jbuilder runtest" >> /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
 # CMD bash -ex /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
-CMD sudo cat /etc/mpd.conf
+CMD jbuilder build @runtravistest
