--- a/travis/Dockerfile.ubuntu-17.04
+++ b/travis/Dockerfile.ubuntu-17.04
@@ -42,7 +42,6 @@ WORKDIR /home/ocaml-libmpdclient/ocaml-libmpdclient
 RUN wget https://raw.github.com/ocaml/opam/master/shell/opam_installer.sh -O - | sudo sh -s /usr/local/bin
 RUN /usr/local/bin/opam init --comp 4.05.0
 RUN opam install lwt cmdliner jbuilder odoc
-# RUN echo ". /home/ocaml-libmpdclient/.opam/opam-init/init.sh > /dev/null 2> /dev/null || true" > /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
-# RUN echo "jbuilder runtest" >> /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
-# CMD bash -ex /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
-CMD jbuilder build @runtravistest
+RUN echo ". /home/ocaml-libmpdclient/.opam/opam-init/init.sh > /dev/null 2> /dev/null || true" > /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
+RUN echo "jbuilder build @runtravistest" >> /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
+CMD bash -ex /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
