Tests: run mdp server in the shell script

--- a/travis/Dockerfile.ubuntu-17.04
+++ b/travis/Dockerfile.ubuntu-17.04
@@ -37,11 +37,11 @@ RUN mkdir /home/ocaml-libmpdclient/mpd/playlists
 RUN wget -P /home/ocaml-libmpdclient/mpd/music -i /home/ocaml-libmpdclient/ocaml-libmpdclient/free_mp3_urls.txt
 RUN ls -1 /home/ocaml-libmpdclient/mpd/music/ > /home/ocaml-libmpdclient/mpd/playlists/bach.m3u
 RUN echo "/home/ocaml-libmpdclient/mpd/music/kunst01.mp3" > /home/ocaml-libmpdclient/mpd/playlists/bach1.m3u
-RUN mpd
 WORKDIR /home/ocaml-libmpdclient/ocaml-libmpdclient
 RUN wget https://raw.github.com/ocaml/opam/master/shell/opam_installer.sh -O - | sudo sh -s /usr/local/bin
 RUN /usr/local/bin/opam init --comp 4.05.0
 RUN opam install lwt cmdliner jbuilder odoc ounit
 RUN echo ". /home/ocaml-libmpdclient/.opam/opam-init/init.sh > /dev/null 2> /dev/null || true" > /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
+RUN echo "mpd" >> /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
 RUN echo "jbuilder build @runtravistest" >> /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
 CMD bash -ex /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
