--- a/libmpdclient.opam
+++ b/libmpdclient.opam
@@ -1,5 +1,5 @@
 opam-version: "1.2"
-name: "OCaml-libmpdclient"
+name: "libmpdclient"
 version: "~unknown"
 maintainer: "cedlemo <cedlemo@gmx.com>"
 authors: "cedlemo <cedlemo@gmx.com>"
