Update mpd.conf with a fake audio output

--- a/travis/mpd.conf
+++ b/travis/mpd.conf
@@ -210,15 +210,15 @@ input {
 #
 # An example of an ALSA output:
 #
-audio_output {
-	type		"alsa"
-	name		"My ALSA Device"
+#audio_output {
+#	type		"alsa"
+#	name		"My ALSA Device"
 #	device		"hw:0,0"	# optional
 #	mixer_type      "hardware"      # optional
 #	mixer_device	"default"	# optional
 #	mixer_control	"PCM"		# optional
 #	mixer_index	"0"		# optional
-}
+#}
 #
 # An example of an OSS output:
 #
@@ -325,11 +325,11 @@ audio_output {
 #
 ## An example of a null output (for no audio output):
 #
-#audio_output {
-#	type		"null"
-#	name		"My Null Output"
-#	mixer_type      "none"                  # optional
-#}
+audio_output {
+	type		"null"
+	name		"My Null Output"
+	mixer_type      "none"                  # optional
+}
 #
 # If MPD has been compiled with libsamplerate support, this setting specifies
 # the sample rate converter to use.  Possible values can be found in the
