--- a/travis/Dockerfile
+++ b/travis/Dockerfile
@@ -29,11 +29,6 @@ USER ocaml-libmpdclient
 
 COPY . /home/ocaml-libmpdclient/ocaml-libmpdclient
 RUN sudo chown -R ocaml-libmpdclient:ocaml-libmpdclient /home/ocaml-libmpdclient/ocaml-libmpdclient
-RUN mkdir -p /tmp/mpd/{music,playlists}
-RUN cp /home/ocaml-libmpdclient/ocaml-libmpdclient/travis/mpd.conf /tmp/mpd.conf \
-  && cp /home/ocaml-libmpdclient/ocaml-libmpdclient/travis/*.mp3 /tmp/mpd/music/ \
-  && ls -1 /home/ocaml-libmpdclient/mpd/music/ > /tmp/mpd/playlists/bach.m3u \
-  && echo "/home/ocaml-libmpdclient/mpd/music/kunst01.mp3" > /tmp/mpd/playlists/bach1.m3u
 WORKDIR /home/ocaml-libmpdclient/ocaml-libmpdclient
 RUN wget https://raw.github.com/ocaml/opam/master/shell/opam_installer.sh -O - | sudo sh -s /usr/local/bin \
   && /usr/local/bin/opam init --comp 4.06.0 \
@@ -41,4 +36,10 @@ RUN wget https://raw.github.com/ocaml/opam/master/shell/opam_installer.sh -O - |
 RUN echo ". /home/ocaml-libmpdclient/.opam/opam-init/init.sh > /dev/null 2> /dev/null || true" > /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh \
   && echo "mpd /tmp/mpd.conf" >> /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh \
   && echo "jbuilder runtest" >> /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
+RUN mkdir -p /tmp/mpd/{music,playlists} \
+  && cp /home/ocaml-libmpdclient/ocaml-libmpdclient/travis/mpd.conf /tmp/mpd/mpd.conf \
+  && cp /home/ocaml-libmpdclient/ocaml-libmpdclient/travis/*.mp3 /tmp/mpd/music/ \
+  && ls -1 /home/ocaml-libmpdclient/mpd/music/ > /tmp/mpd/playlists/bach.m3u \
+  && echo "/home/ocaml-libmpdclient/mpd/music/kunst01.mp3" > /tmp/mpd/playlists/bach1.m3u
+
 CMD bash -ex /home/ocaml-libmpdclient/ocaml-libmpdclient/runtest.sh
