--- a/travis/mpd.conf
+++ b/travis/mpd.conf
@@ -12,14 +12,14 @@
 # be disabled and audio files will only be accepted over ipc socket (using
 # file:// protocol) or streaming files over an accepted protocol.
 #
-music_directory		"/home/ocaml-libmpdclient/mpd/music"
+music_directory		"/tmp/mpd/music"
 #
 # This setting sets the MPD internal playlist directory. The purpose of this
 # directory is storage for playlists created by MPD. The server will use
 # playlist files not created by the server but only if they are in the MPD
 # format. This setting defaults to playlist saving being disabled.
 #
-playlist_directory		"/home/ocaml-libmpdclient/mpd/playlists"
+playlist_directory		"/tmp/mpd/playlists"
 #
 # This setting sets the location of the MPD database. This file is used to
 # load the database at server start up and store the database while the
@@ -27,7 +27,7 @@ playlist_directory		"/home/ocaml-libmpdclient/mpd/playlists"
 # MPD to accept files over ipc socket (using file:// protocol) or streaming
 # files over an accepted protocol.
 #
-db_file			"/home/ocaml-libmpdclient/mpd/tag_cache"
+db_file			"/tmp/mpd/tag_cache"
 #
 # These settings are the locations for the daemon log files for the daemon.
 # These logs are great for troubleshooting, depending on your log_level
@@ -36,25 +36,25 @@ db_file			"/home/ocaml-libmpdclient/mpd/tag_cache"
 # The special value "syslog" makes MPD use the local syslog daemon. This
 # setting defaults to logging to syslog, otherwise logging is disabled.
 #
-log_file			"/home/ocaml-libmpdclient/mpd/mpd.log"
+log_file			"/tmp/mpd/mpd.log"
 #
 # This setting sets the location of the file which stores the process ID
 # for use of mpd --kill and some init scripts. This setting is disabled by
 # default and the pid file will not be stored.
 #
-pid_file			"/home/ocaml-libmpdclient/mpd/pid"
+pid_file			"/tmp/mpd/pid"
 #
 # This setting sets the location of the file which contains information about
 # most variables to get MPD back into the same general shape it was in before
 # it was brought down. This setting is disabled by default and the server
 # state will be reset on server start up.
 #
-state_file			"/home/ocaml-libmpdclient/mpd/state"
+state_file			"/tmp/mpd/state"
 #
 # The location of the sticker database.  This is a database which
 # manages dynamic information attached to songs.
 #
-sticker_file                   "/home/ocaml-libmpdclient/mpd/sticker.sql"
+sticker_file                   "/tmp/mpd/sticker.sql"
 #
 ###############################################################################
 
