--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           command: sudo apk update && sudo apk add git m4 mpd
       - run:
           name: Install OCaml packages.
-          command: opam install lwt cmdliner jbuilder odoc ounit
+          command: opam install -y lwt cmdliner jbuilder odoc ounit
       - run:
           name: Prepare the mpd data for tests.
           command:
