Fix bad path to copy mpd.conf in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           name: Prepare the mpd data for tests.
           command:
                   mkdir -p /tmp/mpd/{music,playlists,tag_cache} \
-                  && cp travis/mpd.conf /tmp/mpd.conf \
+                  && cp travis/mpd.conf /tmp/mpd/mpd.conf \
                   && cp travis/*.mp3 /tmp/mpd/music/ \
                   && ls -1 /tmp/mpd/music/ > /tmp/mpd/playlists/bach.m3u \
                   && echo "/tmp/mpd/music/kunst01.mp3" > /tmp/mpd/playlists/bach1.m3u
