--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ services:
 
 matrix:
   include:
-    - env: TYPE=ubuntu-17.10
-
+    - env: TYPE=ubuntu
+    - env: TYPE=alpine
 install:
   - docker build
       -t ocaml-libmpdclient/${TYPE}
-      -f travis/Dockerfile
+      -f travis/Dockerfile-${TYPE}
       .
 
 script:
