--- a/.travis/Dockerfile-ubuntu
+++ b/.travis/Dockerfile-ubuntu
@@ -1,17 +1,32 @@
-FROM ocaml/opam:alpine_ocaml-4.06.0
+FROM ocaml/opam:ubuntu-16.04_ocaml-4.06.0
 
 RUN \
-  sudo addgroup -S ocaml-libmpdclient && sudo adduser -S -G ocaml-libmpdclient ocaml-libmpdclient
+  sudo apt update && \
+  sudo apt install -y \
+    sudo \
+    git \
+    darcs \
+    mercurial \
+    gcc \
+    g++ \
+    make \
+    wget \
+    mpd \
+    libmpd-dev \
+    aspcud \
+    m4 \
+    unzip \
+    pkg-config \
+    patch
 
-RUN sudo apk update && sudo apk add git m4 mpd
+RUN \
+  sudo useradd --user-group --create-home ocaml-libmpdclient
 
 RUN \
   echo "ocaml-libmpdclient ALL=(ALL:ALL) NOPASSWD:ALL" | \
     sudo EDITOR=tee visudo -f /etc/sudoers.d/ocaml-libmpdclient
 
 USER ocaml-libmpdclient
-
-COPY . /home/ocaml-libmpdclient/ocaml-libmpdclient
 ENV WDIR=/home/ocaml-libmpdclient/ocaml-libmpdclient
 ENV TMP=$WDIR/tmp
 ENV U=ocaml-libmpdclient
@@ -20,15 +35,15 @@ COPY . /home/ocaml-libmpdclient/ocaml-libmpdclient
 RUN sudo chown -R $U:$U $WDIR
 WORKDIR /home/ocaml-libmpdclient/ocaml-libmpdclient
 RUN opam init --comp 4.06.0
-RUN opam install lwt cmdliner jbuilder odoc ounit
+  && opam install lwt cmdliner jbuilder odoc ounit
 RUN mkdir -p $TMP/mpd/music && mkdir $TMP/mpd/playlists \
-  && cp $WDIR/travis/mpd.conf $TMP/mpd/mpd.conf \
-  && cp $WDIR/travis/*.mp3 $TMP/mpd/music/ \
+  && cp $WDIR/.travis/mpd.conf $TMP/mpd/mpd.conf \
+  && cp $WDIR/.travis/*.mp3 $TMP/mpd/music/ \
   && ls -1 $TMP/mpd/music/ > $TMP/mpd/playlists/bach.m3u \
   && echo $TMP"/mpd/music/kunst01.mp3" > $TMP/mpd/playlists/bach1.m3u \
   && cat $TMP/mpd/playlists/bach.m3u \
   && cat $TMP/mpd/playlists/bach1.m3u
-RUN echo ". /home/ocaml-libmpdclient/.opam/opam-init/init.sh > /dev/null 2> /dev/null || true" > $WDIR/runtest.sh \
+  && echo ". /home/ocaml-libmpdclient/.opam/opam-init/init.sh > /dev/null 2> /dev/null || true" > $WDIR/runtest.sh \
   && echo "mpd "$TMP"/mpd/mpd.conf" >> $WDIR/runtest.sh \
   && echo "jbuilder runtest" >> $WDIR/runtest.sh
 CMD bash -ex $WDIR/runtest.sh
