Use system /tmp dir in order to put mpd data and conf in testing env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,14 +16,14 @@ jobs:
       - run:
           name: Prepare the mpd data for tests.
           command:
-                  mkdir -p /tmp/mpd/{music,playlists,tag_cache} \
-                  && cp travis/mpd.conf /tmp/mpd/mpd.conf \
-                  && cp travis/*.mp3 /tmp/mpd/music/ \
+                  mkdir -p /tmp/mpd/music \
+                  && mkdir /tmp/mpd/playlists \
+                  && cp .travis/*.mp3 /tmp/mpd/music/ \
                   && ls -1 /tmp/mpd/music/ > /tmp/mpd/playlists/bach.m3u \
                   && echo "/tmp/mpd/music/kunst01.mp3" > /tmp/mpd/playlists/bach1.m3u
       - run:
           name: Run Mpd server in background.
-          command: mpd /tmp/mpd/mpd.conf
+          command: mpd .travis/mpd.conf
           background: true
       - run:
           name: Run the tests
