CircleCi : create a user in order to run mpd and the test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,12 @@ jobs:
                   && ls -1 /tmp/mpd/music/ > /tmp/mpd/playlists/bach.m3u
                   && echo "/tmp/mpd/music/kunst01.mp3" > /tmp/mpd/playlists/bach1.m3u
       - run:
+          name: Create user to run mpd
+          command: sudo addgroup -S ocaml-libmpdclient
+                   && sudo adduser -S -G ocaml-libmpdclient ocaml-libmpdclient
+                   && echo "ocaml-libmpdclient ALL=(ALL:ALL) NOPASSWD:ALL"
+                   | sudo EDITOR=tee visudo -f /etc/sudoers.d/ocaml-libmpdclient
+      - run:
           name: Run Mpd server in background.
           command: mpd .travis/mpd.conf
           background: true
