Use ocaml-libmpdclient as group for the mpd server

--- a/.travis/mpd.conf
+++ b/.travis/mpd.conf
@@ -73,7 +73,7 @@ user				"ocaml-libmpdclient"
 # This is useful if MPD needs to be a member of group such as "audio" to
 # have permission to use sound card.
 #
-#group                          "ocaml-libmpdclient"
+group                          "ocaml-libmpdclient"
 #
 # This setting sets the address for the daemon to listen on. Careful attention
 # should be paid if this is assigned to anything other then the default, any.
