--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,9 @@ jobs:
           command: sudo apk update && sudo apk add git m4 mpd
       - run:
           name: Install OCaml packages.
-          command: opam install -y lwt cmdliner jbuilder odoc ounit
+          command: opam update -y
+                   && opam upgrade -y
+                   && opam install -y lwt cmdliner jbuilder odoc ounit
       - run:
           name: Create user to run mpd
           command: sudo addgroup -S ocaml-libmpdclient
