--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ jobs:
           command: sudo apk update && sudo apk add git m4 mpd
       - run:
           name: Install OCaml packages.
-          command: opam update -y
+          command: opam switch 4.06.1
+                   && opam update -y
                    && opam upgrade -y
                    && opam install -y lwt cmdliner jbuilder odoc ounit
       - run:
