CircleCi : output information about the mpd server after running it

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,9 @@ jobs:
       - run:
           name: Run Mpd server in background.
           command: sudo mpd .travis/mpd.conf
+                   && cat /tmp/mpd/mpd.state
+                   && cat /tmp/mpd/mpd.log
+                   && cat /tmp/mpd.error
           background: true
       - run:
           name: Run the tests
