--- a/.travis/Dockerfile-alpine
+++ b/.travis/Dockerfile-alpine
@@ -20,7 +20,7 @@ COPY . /home/ocaml-libmpdclient/ocaml-libmpdclient
 RUN sudo chown -R $U:$U $WDIR
 WORKDIR /home/ocaml-libmpdclient/ocaml-libmpdclient
 RUN opam init --comp 4.06.0 \
-  && opam install lwt cmdliner jbuilder odoc ounit bisect_ppx
+  && opam install lwt cmdliner jbuilder dune odoc ounit bisect_ppx
 RUN mkdir -p $TMP/mpd/music && mkdir $TMP/mpd/playlists \
   && cp $WDIR/.travis/mpd.conf $TMP/mpd/mpd.conf \
   && cp $WDIR/.travis/*.mp3 $TMP/mpd/music/ \
@@ -28,5 +28,5 @@ RUN mkdir -p $TMP/mpd/music && mkdir $TMP/mpd/playlists \
   && echo $TMP"/mpd/music/kunst01.mp3" > $TMP/mpd/playlists/bach1.m3u \
   && echo ". /home/ocaml-libmpdclient/.opam/opam-init/init.sh > /dev/null 2> /dev/null || true" > $WDIR/runtest.sh \
   && echo "mpd "$TMP"/mpd/mpd.conf" >> $WDIR/runtest.sh \
-  && echo "jbuilder runtest" >> $WDIR/runtest.sh
+  && echo "dune runtest --profile dev" >> $WDIR/runtest.sh
 CMD bash -ex $WDIR/runtest.sh
