Test with dev profile for dune

--- a/.travis/Dockerfile-alpine
+++ b/.travis/Dockerfile-alpine
@@ -28,6 +28,6 @@ RUN mkdir -p $TMP/mpd/music && mkdir $TMP/mpd/playlists \
   && echo $TMP"/mpd/music/kunst01.mp3" > $TMP/mpd/playlists/bach1.m3u \
   && echo ". /home/ocaml-libmpdclient/.opam/opam-init/init.sh > /dev/null 2> /dev/null || true" > $WDIR/runtest.sh \
   && echo "mpd "$TMP"/mpd/mpd.conf" >> $WDIR/runtest.sh \
-  && echo "dune runtest --profile dev" >> $WDIR/runtest.sh \
+  && echo "dune runtest --profile release" >> $WDIR/runtest.sh \
   && mpd --version
 CMD bash -ex $WDIR/runtest.sh
