Try to fix sudo issue in circleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,22 +9,7 @@ jobs:
       - checkout
       - run:
           name: Install Ubuntu packages
-          command: sudo apt update && \
-                   sudo apt install -y \
-                   git \
-                   darcs \
-                   mercurial \
-                   gcc \
-                   g++ \
-                   make \
-                   wget \
-                   mpd \
-                   libmpd-dev \
-                   aspcud \
-                   m4 \
-                   unzip \
-                   pkg-config \
-                   patch
+          command: sudo apt update && sudo apt install -y sudo git darcs mercurial gcc g++ make wget mpd libmpd-dev aspcud m4 unzip pkg-config patch
       - run:
           name: Install OCaml environment.
           command: sudo wget https://raw.github.com/ocaml/opam/master/shell/opam_installer.sh -O - | sudo sh -s /usr/local/bin
