Use dune in opam file

--- a/libmpdclient.opam
+++ b/libmpdclient.opam
@@ -7,10 +7,10 @@ homepage: "https://github.com/cedlemo/OCaml-libmpdclient"
 bug-reports: "https://github.com/cedlemo/OCaml-libmpdclient/issues"
 license: "GPL3"
 dev-repo: "https://github.com/cedlemo/OCaml-libmpdclient"
-build: [["jbuilder" "build" "-p" name "-j" jobs]]
-build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
+build: [["dune" "build" "-p" name "-j" jobs]]
+build-test: [["dune" "runtest" "-p" name "-j" jobs]]
 depends: [
-  "jbuilder" {build}
+  "dune" {build}
   "lwt"
   "ounit"
   "cmdliner"
