--- a/.travis/Dockerfile-alpine
+++ b/.travis/Dockerfile-alpine
@@ -19,7 +19,7 @@ ENV HOME=/home/ocaml-libmpdclient
 COPY . /home/ocaml-libmpdclient/ocaml-libmpdclient
 RUN sudo chown -R $U:$U $WDIR
 WORKDIR /home/ocaml-libmpdclient/ocaml-libmpdclient
-RUN opam init --comp 4.09.0 \
+RUN opam init  --disable-sandboxing \
   && opam install lwt cmdliner jbuilder dune odoc ounit bisect_ppx
 RUN mkdir -p $TMP/mpd/music && mkdir $TMP/mpd/playlists \
   && cp $WDIR/.travis/mpd.conf $TMP/mpd/mpd.conf \
