Travis: add missing dependencies in Dockerfiles

--- a/.travis/Dockerfile-ubuntu
+++ b/.travis/Dockerfile-ubuntu
@@ -35,7 +35,7 @@ COPY . /home/ocaml-libmpdclient/ocaml-libmpdclient
 RUN sudo chown -R $U:$U $WDIR
 WORKDIR /home/ocaml-libmpdclient/ocaml-libmpdclient
 RUN opam init --disable-sandboxing \
-  && opam install lwt cmdliner jbuilder odoc ounit bisect_ppx dune
+  && opam install lwt cmdliner jbuilder odoc ounit bisect_ppx dune logs
 RUN mkdir -p $TMP/mpd/music && mkdir $TMP/mpd/playlists \
   && cp $WDIR/.travis/mpd.conf $TMP/mpd/mpd.conf \
   && cp $WDIR/.travis/*.mp3 $TMP/mpd/music/ \
