--- a/.travis/mpd/mpd.conf
+++ b/.travis/mpd/mpd.conf
@@ -82,7 +82,7 @@ group                          "ocaml-libmpdclient"
 # activation is in use.
 #
 # For network
-bind_to_address		"localhost"
+bind_to_address		"any"
 #
 # And for Unix Socket
 #bind_to_address		"/run/mpd/socket"
