--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,6 @@ sudo: required
 services:
         - docker
 
-env:
-  DOCKER_COMPOSE_VERSION: 1.24.1
-
 matrix:
   include:
     - env: TYPE=ubuntu
@@ -14,8 +11,7 @@ matrix:
 
 before_install:
   - sudo rm /usr/local/bin/docker-compose
-  - echo https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` 
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` -o docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/1.24.1/docker-compose-`uname -s`-`uname -m` -o docker-compose
   - chmod +x docker-compose
   - sudo mv docker-compose /usr/local/bin
 
