It compiles with OCaml 4.13 now

--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,4 @@
 (executable
-  (name ompdc)
-  (public_name ompdc)
-  (libraries libmpdclient lwt lwt.unix cmdliner notty notty.lwt unix)
-)
+ (name ompdc)
+ (public_name ompdc)
+ (libraries libmpdclient lwt lwt.unix cmdliner notty notty.lwt unix))
